Fixed overflow in videotutorial component

--- a/css/src/admin-global.scss
+++ b/css/src/admin-global.scss
@@ -317,5 +317,5 @@ td.column-wpseo-linked {
 }
 
 #yoast-help-center-container {
-	padding-top: 16px;
+	padding-top: 8px;
 }
